--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "name": "next14-wss",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "canary",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.2-canary.6"
+    "ws": "^8.14.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "@types/ws": "^8.5.8",
+    "typescript": "^5"
   }
 }
